# AoC2024

./: pyproject.toml
01/: 01_1.py  01_2.py
01/swift/: 01_1.swift  01_2.swift
02/: 02_1.py  02_2.py
03/: 03_1.py  03_2.py
04/: 04_1.py  04_2.py
05/: 05_1.py  05_2.py
06/: 06_1.py  06_2.py
07/: 07_1.py  07_2.py
08/: 08_1.py  08_2.py
09/: 09_1.py  09_2.py
10/: 10_1.py  10_2.py
11/: 11_1.py  11_2.py
12/: 12_1.py  12_2.py  12_2_vis.py
13/: 13_1.py  13_2.py
14/: 14_1.py  14_2.py  14_2_vis.py
15/: 15_1.py  15_2.py  canvas.py
16/: 16_1.py  16_2.py  dijkstra.py  dijkstra2.py
17/: 17_1.py  17_2.py
18/: 18_1.py  18_2.py  dijkstra.py
19/: 19_1.py  19_2.py
20/: 20.py  dijkstra.py
21/: 21_1.py  dijkstra.py
23/: 23_1.py  23_2.py
24/: 24_1.py  24_2.py  input_swapped.txt
25/: 25.py
