[tool.poetry]
name = "aoc2024"
version = "0.1.0"
description = ""
authors = ["Hiromasa kato <hka@trackman.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
opencv-python-headless = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
